--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
+@import "~antd/dist/antd.css";
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@500&display=swap");
 .App {
-  text-align: center;
+  overflow: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home {
   display: flex;
   flex-direction: column;
+  overflow-y: hidden;
+  height: 100vh;
+
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.hindi-font {
+  font-family: "M PLUS 2", sans-serif;
+  font-size: 16px;
+}
+h2 {
+  font-family: "M PLUS 2", sans-serif;
+  font-size: 19px;
 }
 
-.App-link {
-  color: #61dafb;
+.home-image {
+  align-self: center;
+  align-items: center;
+  height: 50% !important;
+}
+.home-news-header {
+  align-self: flex-start;
+  height: 100%;
+  margin-bottom: 25px;
+}
+.home-news-article {
+  /* height: 32vh; */
+}
+.detail-base {
+  margin-top: 90px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+.detail-page {
+  /* align-self: center !important; */
+  align-items: center;
+}
+.detail-img {
+  align-self: center;
+}
+.detail-base img {
+  height: 400px;
+  padding: 10px;
+  border-radius: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detail-news {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.detail-meta {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
