Updated new parts

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,3 +44,11 @@
   border-top: 2px solid rgba(13, 13, 13, 0.1);
   margin: 2rem 0;
 }
+span {
+  word-wrap: break-word !important;
+  }
+
+  .BLOG_video_class{
+  width: 50% !important;
+  padding: 0.5rem
+  }
